add reactive component with abstract realisation